--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_bloc:
   hydrated_bloc:
   path_provider:
+  firebase_core: ^3.6.0
+  firebase_auth:
 
 dev_dependencies:
   flutter_test:
